Fix hover problem in tasks & edit the spacing: - Now after clicking one task btn, if you hover another btn it will change the bg-color correctly. - Divide the sidebar in 2 blocks and adjust the spacing.

--- a/src/style.css
+++ b/src/style.css
@@ -46,7 +46,19 @@ body {
 .sections {
     display: flex;
     flex-direction: column;
-    gap: 0.75rem
+    gap: 1rem
+}
+
+.tasks {
+    display: flex;
+    flex-direction: column;
+    gap: 0.25rem;
+}
+
+.create {
+    display: flex;
+    flex-direction: column;
+    gap: 0.5rem
 }
 
 .section-line {
